fixing deals select align issue

--- a/src/components/BestDeals/Deals.css
+++ b/src/components/BestDeals/Deals.css
@@ -20,3 +20,25 @@
     width: 15px;
     margin: 0 5px;
 }
+.deals-container h2{
+    text-align: center;
+    color: #2daae1;
+    font-size: 40px;
+    font-weight: 300;
+    margin: 30px 0 0px;
+}
+.filter-selector{
+    max-width: 700px;
+    margin: auto;
+    text-align: end;
+}
+.filter-selector select{
+    width: 120px;
+    height: 40px;
+    color: #67c1f5;
+    background: rgba( 103, 193, 245, 0.1 );
+    border: 0;
+}
+.deals-list-rows{
+    margin: 15px 50px;
+}
